# android-api-rs

./: .gitignore  Cargo.toml
android_api_util/: Cargo.toml
android_api_util/src/: lib.rs  resources.rs
android_notif/: Cargo.toml
android_notif/src/: channel.rs  notification.rs
