[package]
name = "android_notif"
version = "0.1.0"
authors = ["Patrik Buhring <patrikbuhring@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndk = "0.3.0"
ndk-glue = "0.3.0"
jni = "0.19.0"
once_cell = "1.7.2"

android_api_util = { path = "../android_api_util" }
